add notes